--- a/Views/SerialPortRS232View.xaml
+++ b/Views/SerialPortRS232View.xaml
@@ -29,12 +29,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Label Content="Cryptographic device" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" 
@@ -68,12 +66,49 @@
                     Command="{Binding ControlSerialPortSessionCommand, Mode=OneTime}" Style="{DynamicResource RoundButton}"
                     CommandParameter="CLOSE" Width="75" Grid.Column="2" Grid.Row="2" Margin="5"/>
 
-        <DockPanel Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
-            <Label Content="Baud rate:" DockPanel.Dock="Left" FontWeight="Bold"/>
-            <TextBox Text="100" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
-        </DockPanel>
-        <CheckBox Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left"
-                  Margin="5" Content="Advanced Options" FontWeight="Bold"/>
+        <Grid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            <DockPanel Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">
+                <Label Content="Baud rate:" DockPanel.Dock="Left" FontWeight="Bold"/>
+                <TextBox Text="{Binding BaudRate}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+            </DockPanel>
+            
+            <CheckBox x:Name="serialAdvOpt" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"
+                      Margin="5" Content="Advanced Options" FontWeight="Bold"/>
+
+            <DockPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left"
+                       IsEnabled="{Binding ElementName=serialAdvOpt, Path=IsChecked}">
+                <Label Content="Data bits: " DockPanel.Dock="Left" FontWeight="Bold"/>
+                <TextBox Text="{Binding DataBits}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+            </DockPanel>
+
+            <DockPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" 
+                       IsEnabled="{Binding ElementName=serialAdvOpt, Path=IsChecked}">
+                <Label Content="Parity: " DockPanel.Dock="Left" FontWeight="Bold"/>
+                <ComboBox ItemsSource="{Binding SerialPortParity, Mode=OneTime}"
+                          SelectedItem="{Binding SelectedParity, Mode=TwoWay}"
+                          IsSynchronizedWithCurrentItem="False"
+                          DockPanel.Dock="Right"/>
+            </DockPanel>
+            <DockPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left"
+                       IsEnabled="{Binding ElementName=serialAdvOpt, Path=IsChecked}">
+                <Label Content="Stop bits: " DockPanel.Dock="Left" FontWeight="Bold"/>
+                <ComboBox ItemsSource="{Binding SerialPortStopBits, Mode=OneTime}"
+                          SelectedItem="{Binding SelectedStopBits, Mode=TwoWay}"
+                          IsSynchronizedWithCurrentItem="False"
+                          DockPanel.Dock="Right"/>
+            </DockPanel>
+        </Grid>
 
     </Grid>
 </UserControl>
