Measure loop continue to be implemented

--- a/Views/OscilloscopeConfigView.xaml
+++ b/Views/OscilloscopeConfigView.xaml
@@ -350,6 +350,8 @@
                          AcceptsReturn="True"  
                          MinWidth="50"
                          MinHeight="75"
+                         MaxWidth="400"
+                         MaxHeight="150"
                          VerticalScrollBarVisibility="Auto"
                          TextWrapping="WrapWithOverflow">
                     <TextBox.Style>
