--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,10 +10,6 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         Title="P-SCAAT" Height="600" Width="1000"
         >
-    
-    <!--<Window.Resources>
-        <osciloscopeView:OsciloscopeView x:Key="osciloscopeView"/>
-    </Window.Resources>-->
 
     <Grid Background="WhiteSmoke">
         <Grid.Resources>
@@ -34,7 +30,7 @@
             <ColumnDefinition Width="*" MinWidth="80"/>
         </Grid.ColumnDefinitions>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="0" Margin="5,5,5,5" Padding="5,5,5,5">
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="0" Margin="5" Padding="5">
             <ContentControl Content="{Binding OscilloscopeSelectedVM}"/>
         </ScrollViewer>
         
@@ -42,25 +38,11 @@
               HorizontalAlignment="Center" 
               VerticalAlignment="Stretch"
               Background="Black" 
-              ShowsPreview="true"
+              ShowsPreview="True"
               Width="2"/>
         
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="2" Margin="5,5,5,5" Padding="5,5,5,5">
-            <!--<Label Content="PLACEHOLDER" HorizontalAlignment="Center" VerticalAlignment="Center"/>-->
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="2" Margin="5" Padding="5">
             <ContentControl Content="{Binding SerialPort232}"/>
         </ScrollViewer>
-        <!--<ContentControl Content="{Binding OsciloscopeSelectedVM}">
-            <ContentControl.Resources>
-                <DataTemplate DataType="{x:Type viewmodels:OsciloscopeViewModel}">
-                    <views:OsciloscopeView/>
-                </DataTemplate>
-                <DataTemplate DataType="{x:Type viewmodels:OsciloscopeConfigViewModel}">
-                    <views:OsciloscopeConfigView/>
-                </DataTemplate>
-            </ContentControl.Resources>
-        </ContentControl>-->
-        <!--<views:OsciloscopeView/>-->
-        <!--<Label Content="{Binding OsciloscopeViewModel.SelectedAvailableOsciloscopes, FallbackValue=NULLLLL}" Margin="280,204,40,25"/>-->
-        <!--<osciloscopeView:OsciloscopeConfigView/>-->
     </Grid>
 </Window>
