--- a/Views/OscilloscopeView.xaml
+++ b/Views/OscilloscopeView.xaml
@@ -2,9 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:P_SCAAT.Views"             
-             xmlns:converters="clr-namespace:P_SCAAT.Views.ValueConverters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:P_SCAAT.ViewModels"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=viewModels:OscilloscopeViewModel}"
@@ -28,7 +26,7 @@
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
     </UserControl.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -58,15 +56,11 @@
                       ItemsSource="{Binding AvailableOscilloscopes, Mode=OneWay}"
                       SelectedItem="{Binding SelectedAvailableOscilloscopes, Mode=TwoWay}"
                       IsSynchronizedWithCurrentItem="False"
-                      Grid.Row="1"
-                      Grid.Column="1"
-                      Grid.ColumnSpan="2"
-                      Margin="5"
-                      HorizontalAlignment="Left"
-                      VerticalAlignment="Center"
+                      Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+                      Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"
                       Width="260"
                       SelectedIndex="0"
-                      IsEnabled="{Binding IsSessionClosed, FallbackValue=True}"/>
+                      IsEnabled="{Binding IsSessionClosed, Mode=OneWay, FallbackValue=True}"/>
 
             <Button Name="btnRefreshOscilloscopeList" HorizontalAlignment="Center" VerticalAlignment="Center" 
                     Height="20" Width="20" Grid.Column="0" Grid.Row="1" Margin="5" Style="{DynamicResource RoundButton}"
@@ -77,10 +71,10 @@
             <Button x:Name="btnOpenSession" Content="Open session" HorizontalAlignment="Left" VerticalAlignment="Top" 
                     Command="{Binding ControlOscilloscopeSessionCommand, Mode=OneTime}" Style="{DynamicResource RoundButton}"
                     CommandParameter="OPEN" Width="75" Grid.Column="1" Grid.Row="2" Margin="5"/>
-            
+
             <!--IsEnabled="{Binding Oscilloscope.IsSessionOpen, Converter={StaticResource inverseBoolConverter}, FallbackValue=True}"-->
             <!--IsEnabled="{Binding Oscilloscope.IsSessionOpen, FallbackValue=False}"-->
-            
+
             <Button x:Name="btnCloseSession" Content="Close session" HorizontalAlignment="Left" VerticalAlignment="Top" 
                     Command="{Binding ControlOscilloscopeSessionCommand, Mode=OneTime}" Style="{DynamicResource RoundButton}"
                     CommandParameter="CLOSE" Width="75" Grid.Column="2" Grid.Row="2" Margin="5"/>
@@ -125,66 +119,64 @@
             <TextBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" Margin="3" IsReadOnly="True" Background="LightGray" Foreground="#FF7A7A7A" 
                      MinHeight="36" TextWrapping="WrapWithOverflow" Width="250" Text="{Binding ManualMessageRead, Mode=TwoWay}"/>
         </Grid>
-        
+
         <Separator Grid.Row="2" HorizontalAlignment="Stretch"/>
-        
+
         <Grid Grid.Row="3">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <DockPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <DockPanel Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Stretch">
                 <Label Content="Traces in total:" DockPanel.Dock="Left" FontWeight="Bold"/>
-                <TextBox Text="100" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+                <TextBox Text="100" DockPanel.Dock="Right" HorizontalAlignment="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
             </DockPanel>
-            <DockPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <DockPanel Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Stretch">
                 <Label Content="Traces per file:" DockPanel.Dock="Left" FontWeight="Bold"/>
-                <TextBox Text="100" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+                <TextBox Text="100" DockPanel.Dock="Right" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="50" Height="20"/>
             </DockPanel>
 
-            
-            
-            <DataGrid Grid.Row="0" Grid.RowSpan="3" Grid.Column="1"
-                      AutoGenerateColumns="False"
-                      HorizontalAlignment="Left"
-                      MinHeight="50"
-                      ItemsSource="{Binding WaveformSource}"
-                      CanUserResizeRows="False"
-                      CanUserDeleteRows="False"
-                      CanUserAddRows="False"
-                      CanUserResizeColumns="False"
-                      CanUserSortColumns="False"
-                      CanUserReorderColumns="False"
-                      ColumnWidth="Auto"
-                      MaxColumnWidth="130"
-                      Margin="5"
-                      VerticalContentAlignment="Center"
+            <DataGrid Grid.Row="0" Grid.RowSpan="5" Grid.Column="1"
+                      ItemsSource="{Binding WaveformSource, Mode=OneWay}"
+                      MinHeight="50" AutoGenerateColumns="False" HorizontalAlignment="Left"
+                      CanUserResizeRows="False" CanUserDeleteRows="False"
+                      CanUserAddRows="False" CanUserResizeColumns="False"
+                      CanUserSortColumns="False" CanUserReorderColumns="False"
+                      ColumnWidth="Auto" MaxColumnWidth="130"
+                      Margin="5" VerticalContentAlignment="Center"
                       HorizontalContentAlignment="Center"
                       ToolTip="Selection of sources for measurement. Note that selecting more sources at once will cause the measurement process to slow down."
                       Style="{DynamicResource BoldHeaderGrid}">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Source" Binding="{Binding SourceName, Mode=OneWay}" IsReadOnly="True"/>
-                    <DataGridCheckBoxColumn Header="Enable" Binding="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Source" Binding="{Binding SourceName, Mode=OneWay}" 
+                                        IsReadOnly="True"/>
+                    <DataGridCheckBoxColumn Header="Enable" 
+                                            Binding="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DockPanel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <DockPanel Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Stretch">
                 <Label Content="Message lenght [bytes]:" DockPanel.Dock="Left" FontWeight="Bold"/>
-                <TextBox Text="100" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+                <TextBox Text="{Binding MessageLenght, Mode=TwoWay}" DockPanel.Dock="Right" 
+                         HorizontalAlignment="Right" VerticalContentAlignment="Center" 
+                         Width="50" Height="20"/>
             </DockPanel>
-            
-            <Button Grid.Row="3" Grid.Column="0" Content="{Binding MeasureButtonContent}" Command="{Binding MeasureCommand, Mode=OneTime}"/>
-            <Button Grid.Row="3" Grid.Column="1" Content="SINGLE ACQ"/>
+
+            <Button Grid.Row="3" Grid.Column="0" Height="18" Width="160"
+                    Style="{DynamicResource RoundButton}"
+                    Content="{Binding MeasureButtonContent, Mode=OneWay}" 
+                    Command="{Binding MeasureCommand, Mode=OneTime}"/>
         </Grid>
-        
-            
-            
+
+
+
     </Grid>
 </UserControl>
