--- a/Views/SerialPortRS232View.xaml
+++ b/Views/SerialPortRS232View.xaml
@@ -2,9 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:P_SCAAT.Views"
-             xmlns:converters="clr-namespace:P_SCAAT.Views.ValueConverters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:P_SCAAT.ViewModels"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=viewModels:SerialPortRS232ViewModel}"
@@ -50,7 +48,7 @@
                       VerticalAlignment="Center"
                       Width="260"
                       SelectedIndex="0"
-                      IsEnabled="{Binding IsSessionClosed, FallbackValue=True}"/>
+                      IsEnabled="{Binding IsSessionClosed, Mode=OneWay, FallbackValue=True}"/>
 
         <Button Name="btnRefreshOscilloscopeList" HorizontalAlignment="Center" VerticalAlignment="Center" 
                     Height="20" Width="20" Grid.Column="0" Grid.Row="1" Margin="5" Style="{DynamicResource RoundButton}"
@@ -80,7 +78,7 @@
             
             <DockPanel Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">
                 <Label Content="Baud rate:" DockPanel.Dock="Left" FontWeight="Bold"/>
-                <TextBox Text="{Binding BaudRate}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+                <TextBox Text="{Binding BaudRate, Mode=TwoWay}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
             </DockPanel>
             
             <CheckBox x:Name="serialAdvOpt" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"
@@ -89,7 +87,7 @@
             <DockPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left"
                        IsEnabled="{Binding ElementName=serialAdvOpt, Path=IsChecked}">
                 <Label Content="Data bits: " DockPanel.Dock="Left" FontWeight="Bold"/>
-                <TextBox Text="{Binding DataBits}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
+                <TextBox Text="{Binding DataBits, Mode=TwoWay}" DockPanel.Dock="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
             </DockPanel>
 
             <DockPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" 
